# mize

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  architecture.md  build.rs  deno.json  deploy  dev  errorcodes.yml  errors.toml  flake.nix  lib.nix  md  mize  mize.nix  mize_module.nix  pitty-commit.sh  proto-spec.md  run  rust-toolchain.toml  test-config.toml  webfiles.nix
.zed/: tasks.json
apps/ppc/: Cargo.toml
apps/ppc/src/: main.rs
crates/macro_mize/src/: lib.rs
crates/marts/: Cargo.toml
crates/marts/src/: lib.rs
crates/marts/src/cli/: mod.rs
crates/mize/: Cargo.toml  flake.nix  lib.nix  test-config.toml
crates/mize/docs/usage/: wasm.md
crates/mize/src/: lib.rs
crates/mize/src/core/: item.rs  macros.rs
crates/mize/src/core/instance/: connection.rs  mod.rs  updater.rs
crates/mize/src/platform/os/: fsstore.rs
crates/mize/src/platform/wasm/: init.js
crates/mme/: Cargo.toml  build-web.sh  build.rs  mize.nix
crates/mme/src/: logging.rs
crates/mme/src/core/: mme.rs
crates/mme/src/implementors/slint_widget/: mod.rs
crates/parts/: Cargo.toml
crates/parts/src/: lib.rs
crates/ppc/: Cargo.toml
crates/ppc/src/: lib.rs  main.rs
crates/ppc/src/platform/obsidian/: esbuild.config.js  esbuild.config.mjs  package.json  plugin.ts  pnpm-lock.yaml  rollup.config.js  run
crates/ppc/src/platform/os/: main.rs
crates/vic/: Cargo.toml  webfiles.nix
crates/vic/src/commands/: gui.rs  run.rs
crates/vic/wrapper/: to-source.sh
parts/: Cargo.toml  standalone_parts.rs
parts/cli/: Cargo.toml
parts/cli/src/: lib.rs
parts/js/: Cargo.toml
parts/js/src/: lib.rs
parts/macro_mize/: Cargo.toml
parts/mize/: build.rs  flake.nix  lib.nix
parts/mize/src/: lib.rs
parts/mize/src/core/: config.rs  error.rs  id.rs  item.rs  memstore.rs
parts/mize/src/core/instance/: mod.rs  module.rs  subscription.rs  tests.rs
parts/mize/src/core/proto/: mod.rs
parts/mize/src/platform/os/: cli.rs  fsstore.rs  main.rs  mod.rs  unix_socket.rs
parts/mize/src/test/: mod.rs
parts/mme/: Cargo.toml
parts/mme/src/: lib.rs  main.cpp  main.rs
parts/mme/src/core/: adapter.rs  layout.rs  mme.rs  presenter.rs  slot.rs
parts/mme/src/implementors/html/: index.nix  webview_con.rs
parts/mme/src/implementors/qt_widget/: mod.rs
parts/vic/: Cargo.toml  flake.nix
parts/vic/src/: error.rs  eval.rs  main.rs  victor.rs
parts/vic/src/commands/: snix_testing.rs
src/: client-main.rs  error.rs  hyper-server.rs  item.rs  itemstore.rs  lib.rs  main.rs  proto.rs  server-main.rs  server.rs
src/cli/: call.rs  daemon.rs  get.rs  mod.rs  mount.rs  serve.rs  set.rs  sub.rs
src/core/: error.rs  id.rs  item.rs  lib.rs  memstore.rs
src/core/instance/: connection.rs  mod.rs  module.rs  peer.rs  store.rs  subscription.rs  tests.rs  updater.rs
src/core/proto/: mod.rs
src/instance/: connection.rs  mod.rs  web.rs
src/integrated_types/: test_same.rs
src/platform/os/: cli.rs  fsstore.rs  logging.rs  main.rs  mod.rs  unix-socket.rs  unix_socket.rs
src/platform/os/cli/: call.rs  create.rs  daemon.rs  get.rs  is_running.rs  mount.rs  run.rs  serve.rs  set.rs  show.rs  stop.rs
src/platform/wasm/: init.js  mod.rs
src/server/: itemstore.rs  proto.rs  server_utils.rs
test/: Cargo.toml  Dioxus.toml  README.md
test/src/: main.rs
test/src/components/: echo.rs  hero.rs  mod.rs
test/src/views/: blog.rs  home.rs  mod.rs  navbar.rs
types/mize/instance/: item.json
