[package]
name = "mize"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["cargo"] }
home = "0.5.9"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
axum = { version = "0.6.1", features = ["ws", "headers"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
axum-macros = "0.3.0"
colored = "2.0.0"
derive_more = "0.99.17"
futures-util = "0.3.24"
#itertools = "0.10.5"
#lazy_static = "1.4.0"
#rmp-serde = "1.1.1"
#rmpv = { version = "1.0.0", features = ["serde", "with-serde"] }
tokio = { version = "1.21.0", features = ["full", "net"] }
tokio-stream = "0.1.9"
toml = "0.5.10"
#tower-http = "0.3.5"
uuid = "1.3.0"
log = "0.4.20"
env_logger = "0.10.1"
daemonize = "0.5.0"
nix = { version = "0.27.1", features = ["signal"] }
serde_cbor = "0.11.2"


