[package]
name = "mize"
version = "0.1.1"
edition = "2021"

[lib]
name = "mize"
path = "src/lib.rs"

[[bin]]
name = "mize"
path = "src/platform/os/main.rs"
required-features = [ "os-binary" ]

[features]
os-binary = [ "clap", "home", "env_logger", "daemonize", "nix" ]


[dependencies]
# core dependencies
colored = "2.0.0"
uuid = "1.3.0"
log = "0.4.20"
tokio = { version = "1.21.0", features = ["sync"] }
cbor = "0.4.1"

clap = { version = "4.4.11", features = ["cargo"], optional = true }
home = { version = "0.5.9", optional = true }
env_logger = { version = "0.10.1", optional = true }
daemonize = { version = "0.5.0", optional = true }
nix = { version = "0.27.1", features = ["signal"], optional = true }

axum = { version = "0.6.1", features = ["ws", "headers"], optional = true }
axum-extra = { version = "0.4.2", features = ["spa"], optional = true }
axum-macros = { version = "0.3.0", optional = true }

#tokio-stream = { version = "0.1.9", optional = true }
#derive_more = "0.99.17"
#futures-util = "0.3.24"
#itertools = "0.10.5"
#lazy_static = "1.4.0"
#rmp-serde = "1.1.1"
#rmpv = { version = "1.0.0", features = ["serde", "with-serde"] }
#toml = "0.5.10"
#tower-http = "0.3.5"


