[package]
name = "mme"
version = "0.1.0"
edition = "2021"


[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "os-target" ]
qt = [ "slint", "cpp", "qt_core", "qt_gui", "qt_widgets", "comandr/qt" ]
slint = [ "i-slint-backend-qt", "dep:slint", "slint-interpreter", "spin_on", "qt" ]
os-target = [ "tao", "wry", "tracing-subscriber", "clap", "webkit2gtk", "mize/os-target", "glib" ]
#os-target = [ "tao", "wry", "tracing-subscriber", "clap" ]
wasm-target = [ "wasm-bindgen", "console_error_panic_hook", "wasm-bindgen-cli", "web-sys", "comandr/wasm-target", "mize/wasm-target" ]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[target.'cfg(unix)'.dependencies]
webkit2gtk = { version = "2.0.1", optional = true }

[dependencies]
# core deps
colored = "2.1.0"
enum_dispatch = "0.3.13"
comandr = { git = "https://github.com/c2vi/comandr", default-features = false }
#comandr = { path = "../../../dr-comandr" }
mize = { git = "https://github.com/c2vi/mize", default-features = false }
tracing = "0.1.40"
base64 = "0.22.1"

# wasm dependencies
wasm-bindgen = { version = "0.2.84", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-cli = { version = "0.2.92", optional = true }
web-sys = { version = "0.3.70", optional = true, features = ['console'] }

# os deps
tao = { version = "0.28.1", optional = true }
wry = { version = "0.41.0", optional = true, features = [ "devtools" ] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
clap = { version = "4.5.8", features = ["cargo"], optional = true }
glib = { version = "0.15.12", optional = true }

# qt deps
#qt_gui = "0.5.0"
cpp = { version = "0.5.9", optional = true }
qt_gui = { version = "0.5.0", optional = true }
qt_core = { version = "0.5.0", optional = true }
qt_widgets = { version = "0.5.0", optional = true }

#slint deps
i-slint-backend-qt = { version = "1.7.1", optional = true }
slint = { version = "1.7.1", optional = true }
slint-interpreter = { version = "1.7.1", optional = true }
spin_on = { version = "0.1.1", optional = true }
custom-print = "1.0.0"
flume = "0.11.1"
ciborium = "0.2.2"
ciborium-io = { version = "0.2.2", features = ["std", "alloc"] }
wasm-bindgen-futures = "0.4.49"

[build-dependencies]
cc = "1.1.5"
cpp_build = "0.5"

[lib]
name = "mize_module_mme"
crate-type =["cdylib", "rlib"]

[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "link-args=--import-memory",
]
